--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark encabezado vw-100 position-relative ">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark encabezado vh-100 position-relative ">
+        <div class="container position-absolute top-0">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
