--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Renovación</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Avanzados</a>
+                  <a class="nav-link active" aria-current="page" href="#">Avanzados</a>se 
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Contacto</a>
