--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         </div>
       </nav>
 
+      <section>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti itaque, voluptatum facere vitae maxime quos repellendus dolor, repudiandae impedit officiis, cupiditate quod similique accusamus natus perferendis minima! Fuga id odit minima eligendi non eius explicabo dolorem porro iusto aspernatur. Dolor culpa corrupti veniam, illo eius doloremque, molestias voluptatum laboriosam, soluta optio accusamus dolorem rerum.</p>
+
+      </section>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
