--- a/index.html
+++ b/index.html
@@ -49,7 +49,22 @@
         
           <div class="row justify-content-center">
 
-            <button class="col-12 col-lg-2">haz click</button>
+            <button class="col-12 col-lg-2 btn btn-primary">haz click</button>
+
+          </div>
+          <div class="row justify-content-center">
+
+            <button class="col-12 col-lg-2 btn btn-secondary">haz click</button>
+
+          </div>
+          <div class="row justify-content-center">
+
+            <button class="col-12 col-lg-2 btn btn-primary">haz click</button>
+
+          </div>
+          <div class="row justify-content-center">
+
+            <button class="col-12 col-lg-2 btn btn-dark">haz click</button>
 
           </div>
             
